--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -26,7 +26,7 @@
         <div class="col-md-5">
             <h2>
                 {{{get_emoji}}}
-                <a href="/post/{{post.id}}/comment/{{comment.id}}">{{post.name}}</a>
+                <a href="/post/{{post.id}}/comment/{{comment.id}}">{{post.id.comment.id}}</a>
             </h2>
         </div>
         <div class="col-md-7">
